--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "newmusic",
+  "name": "rouroumusic",
   "version": "1.0.0",
   "description": "music player",
   "author": "kidd",
@@ -12,6 +12,7 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "fastclick": "^1.0.6",
+    "jsonp": "^0.2.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "style-loader": "^0.20.1",
