--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "less-loader": "^4.0.5",
     "style-loader": "^0.20.1",
     "vue": "^2.5.2",
+    "vue-lazyload": "^1.1.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
