--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "style-loader": "^0.20.1",
     "vue": "^2.5.2",
     "vue-lazyload": "^1.1.4",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^2.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
