--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "better-scroll": "^1.8.0",
     "create-keyframe-animation": "^0.1.0",
     "fastclick": "^1.0.6",
+    "js-base64": "^2.4.3",
     "jsonp": "^0.2.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "lyric-parser": "^1.0.1",
     "style-loader": "^0.20.1",
     "vue": "^2.5.2",
     "vue-lazyload": "^1.1.4",
