--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-runtime": "^6.26.0",
     "better-scroll": "^1.8.0",
     "create-keyframe-animation": "^0.1.0",
+    "de-indent": "^1.0.2",
     "fastclick": "^1.0.6",
     "good-storage": "^1.0.1",
     "js-base64": "^2.4.3",
